# file-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: index.html  token.db
src/: db.rs  main.rs  util.rs
