[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
redb = "1.5.0"
salvo = { version = "0.66.0", features=["serve-static", "affix"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
