[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.35"
rand = "0.8.5"
redb = "2.0.0-beta0"
salvo = { version = "0.66.0", features=["serve-static"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
